--- a/style.css
+++ b/style.css
@@ -140,6 +140,14 @@ span {
   color: orange;
 }
 
+.m-top-2 {
+  margin-top: 2rem;
+}
+
+.m-top-1 {
+  margin-top: 1rem;
+}
+
 .latest-work {
   background-color: #0F0B12;
   width: 100%;
@@ -558,8 +566,9 @@ span {
 .conctact {
   background-color: rgb(0, 1, 1);
   width: 100%;
-  padding-top: 3.3rem;
-  padding: 1rem 3rem;
+  padding-top: 4rem;
+  padding-left: 2rem;
+  color: rgba(255, 255, 255, 0.84);
 }
 @media (max-width: 768px) {
   .conctact {
@@ -576,7 +585,7 @@ span {
   width: 35%;
   gap: 2rem;
   flex-direction: column;
-  padding: 1rem;
+  padding-left: 2rem;
 }
 @media (max-width: 768px) {
   .conctact .top-contact .contact-details {
@@ -588,18 +597,23 @@ span {
 }
 .conctact .top-contact .contact-details p {
   width: 70%;
+  line-height: 27px;
 }
 .conctact .top-contact .contact-Numbers {
-  width: 35%;
+  width: 20%;
   padding: 0.1rem 2rem;
   flex-direction: column;
+  gap: 1rem;
+  color: rgba(255, 255, 255, 0.84);
 }
 @media (max-width: 768px) {
   .conctact .top-contact .contact-Numbers {
     width: 100%;
-    padding: 0.1rem 0.5rem;
-    background-color: red;
+    padding-left: 2rem;
   }
+}
+.conctact .top-contact .contact-Numbers .title {
+  color: white;
 }
 .conctact .top-contact .contact-Numbers .title .line {
   width: 55px;
@@ -612,6 +626,7 @@ span {
   line-height: 27px;
   font-family: Family "Josefin Sans";
   color: rgba(255, 255, 255, 0.84);
+  color: rgba(255, 255, 255, 0.84);
 }
 @media (max-width: 768px) {
   .conctact .top-contact .contact-Numbers .numbs-details {
@@ -619,7 +634,6 @@ span {
   }
 }
 .conctact .top-contact .contact-Numbers .numbs-details .numb {
-  margin-top: 2rem;
   gap: 1.2rem;
 }
 @media (max-width: 768px) {
@@ -645,6 +659,10 @@ span {
 .conctact .top-contact .contact-Numbers .numbs-details .email-details a {
   padding-top: 0.8rem;
 }
+.conctact .top-contact .contact-Numbers .numbs-details .website-details {
+  gap: 1rem;
+  margin-top: 1rem;
+}
 .conctact .top-contact .contact-Numbers .numbs-details .website-details .numb {
   margin-top: 0.7rem;
   gap: 1.2rem;
@@ -655,16 +673,25 @@ span {
 }
 .conctact .top-contact .contact-Numbers .numbs-details .website-details a {
   padding-top: 0.8rem;
+  gap: 1rem;
 }
-.conctact .top-contact .contact-Numbers .contact-socials {
-  padding: 2rem;
+.conctact .top-contact .contact-socials {
+  padding-left: 5rem;
+  width: 35%;
 }
-.conctact .top-contact .contact-Numbers .contact-socials .socials {
-  width: 80%;
+@media (max-width: 768px) {
+  .conctact .top-contact .contact-socials {
+    width: 100%;
+    margin-top: 2rem;
+    padding-left: 1rem;
+  }
+}
+.conctact .top-contact .contact-socials .socials {
+  width: 48%;
   gap: 0.6rem;
   margin-bottom: 2rem;
 }
-.conctact .top-contact .contact-Numbers .contact-socials .socials .facebk {
+.conctact .top-contact .contact-socials .socials .facebk {
   width: 23%;
   padding: 0.6rem;
   text-align: center;
@@ -673,38 +700,95 @@ span {
   border-radius: 50%;
   border: 2px solid rgb(152, 152, 153);
 }
-.conctact .top-contact .contact-Numbers .contact-socials .socials .facebk:hover {
+.conctact .top-contact .contact-socials .socials .facebk:hover {
   background-color: rgb(80, 1, 236);
 }
-.conctact .top-contact .contact-Numbers .contact-socials .input {
+.conctact .top-contact .contact-socials .input {
   position: relative;
   margin-top: 1rem;
 }
-.conctact .top-contact .contact-Numbers .contact-socials .input input {
-  width: 100%;
-  padding: 1rem 2rem;
+.conctact .top-contact .contact-socials .input input {
+  width: 270px;
+  padding: 0.8rem 1rem;
   border-radius: 20px;
 }
-.conctact .top-contact .contact-Numbers .contact-socials .input button {
+@media (max-width: 768px) {
+  .conctact .top-contact .contact-socials .input input {
+    width: 90%;
+  }
+}
+.conctact .top-contact .contact-socials .input button {
   padding: 0.7rem 0.6rem;
   border-radius: 20px;
   background-color: rgb(88, 7, 150);
   position: absolute;
   color: white;
-  right: 0.4rem;
+  left: 11.4rem;
   top: 8%;
 }
-.conctact .top-contact .bottom-contact {
+@media (max-width: 768px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 36.8rem;
+  }
+}
+@media (max-width: 617px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 28.2rem;
+  }
+}
+@media (max-width: 540px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 23.8rem;
+  }
+}
+@media (max-width: 500px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 18.2rem;
+  }
+}
+@media (max-width: 478px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 18.2rem;
+  }
+}
+@media (max-width: 414px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 17rem;
+  }
+}
+@media (max-width: 393px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 15.5rem;
+  }
+}
+@media (max-width: 375px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 14.7rem;
+  }
+}
+@media (max-width: 360px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 13.9rem;
+  }
+}
+@media (max-width: 280px) {
+  .conctact .top-contact .contact-socials .input button {
+    left: 9.3rem;
+    background-color: red;
+  }
+}
+.conctact .bottom-contact {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 8rem;
   padding-top: 1.6rem;
-  padding-bottom: 1rem;
+  padding-bottom: 1.4rem;
   border-top: 1px solid gray;
   width: 90%;
   margin-left: 2rem;
 }
 @media (max-width: 768px) {
-  .conctact .top-contact .bottom-contact {
+  .conctact .bottom-contact {
+    margin-top: 5rem;
     width: 100%;
     margin-left: 0rem;
   }
