--- a/_trusted.scss
+++ b/_trusted.scss
@@ -3,6 +3,10 @@
     .top-trusted{
         text-align: center;
         padding-top: 6rem;
+        @media(max-width:768px){
+            font-size: 46px;
+            line-height: 56px;
+            background-color: red;
     }
     .bottm-trusted{
         width: 100%;
@@ -19,6 +23,7 @@
             @media(max-width:768px){
                 margin-left: 1rem;
                 width: 100%;
+                background-color: red;
             }
             // background-color: red;
             .test-content{
@@ -80,4 +85,4 @@
             
         }
     }
-}
+}}
