--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,7 @@ body{
     color: white;
     width: 100vw;
     font-family: 'Josefin Sans', sans-serif;
+    position: relative;
 }
 .container{
     width: 100%;
