--- a/style.css
+++ b/style.css
@@ -148,6 +148,17 @@ span {
   margin-top: 1rem;
 }
 
+.absol {
+  padding: 1rem 1rem;
+  background-color: rgb(176, 28, 240);
+  border-radius: 50%;
+  position: absolute;
+  font-size: 2rem;
+  right: 1rem;
+  position: fixed;
+  top: 29rem;
+}
+
 .latest-work {
   background-color: #0F0B12;
   width: 100%;
@@ -413,54 +424,62 @@ span {
   text-align: center;
   padding-top: 6rem;
 }
-.trusted .bottm-trusted {
+@media (max-width: 768px) {
+  .trusted .top-trusted {
+    font-size: 46px;
+    line-height: 56px;
+    background-color: red;
+  }
+}
+.trusted .top-trusted .bottm-trusted {
   width: 100%;
   padding: 2rem;
   align-items: center;
 }
 @media (max-width: 768px) {
-  .trusted .bottm-trusted {
+  .trusted .top-trusted .bottm-trusted {
     padding: 0.5rem;
   }
 }
-.trusted .bottm-trusted .testimony {
+.trusted .top-trusted .bottm-trusted .testimony {
   width: 80%;
   padding: 2rem 2rem;
   align-items: center;
   margin-left: 10rem;
 }
 @media (max-width: 768px) {
-  .trusted .bottm-trusted .testimony {
+  .trusted .top-trusted .bottm-trusted .testimony {
     margin-left: 1rem;
     width: 100%;
+    background-color: red;
   }
 }
-.trusted .bottm-trusted .testimony .test-content {
+.trusted .top-trusted .bottm-trusted .testimony .test-content {
   width: 100%;
   padding: 1.2rem;
   align-items: center;
 }
-.trusted .bottm-trusted .testimony .test-content .slide {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide {
   width: 100%;
   gap: 4rem;
 }
-.trusted .bottm-trusted .testimony .test-content .slide .left-slide {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide {
   width: 45%;
   position: relative;
 }
 @media (max-width: 768px) {
-  .trusted .bottm-trusted .testimony .test-content .slide .left-slide {
+  .trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide {
     width: 100%;
     gap: 1rem;
   }
 }
-.trusted .bottm-trusted .testimony .test-content .slide .left-slide img {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide img {
   width: 90%;
   transform: rotate(10deg);
   border-right: 2px solid black;
   border-bottom: 2px solid black;
 }
-.trusted .bottm-trusted .testimony .test-content .slide .left-slide .overaly {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide .overaly {
   width: 50%;
   height: 268px;
   background-color: rgb(88, 0, 255);
@@ -469,26 +488,26 @@ span {
   left: 0rem;
   transform: rotate(10deg);
 }
-.trusted .bottm-trusted .testimony .test-content .slide .right-slide {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide {
   width: 70%;
   flex-direction: column;
   gap: 1rem;
 }
 @media (max-width: 768px) {
-  .trusted .bottm-trusted .testimony .test-content .slide .right-slide {
+  .trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide {
     width: 100%;
   }
 }
-.trusted .bottm-trusted .testimony .test-content .slide .right-slide img {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide img {
   width: 8%;
 }
-.trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
+.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
   font-size: 18px;
   line-height: 31px;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
+  .trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
     font-size: 16px;
     line-height: 25px;
   }
@@ -518,6 +537,12 @@ span {
 .happy-sectn .left-happy-sectn h2 {
   font-size: 70px;
   line-height: 70px;
+}
+@media (max-width: 768px) {
+  .happy-sectn .left-happy-sectn h2 {
+    font-size: 30px;
+    line-height: 30px;
+  }
 }
 .happy-sectn .left-happy-sectn .my-contacts {
   width: 40%;
@@ -827,6 +852,7 @@ body {
   color: white;
   width: 100vw;
   font-family: "Josefin Sans", sans-serif;
+  position: relative;
 }
 
 .container {
