--- a/_about.scss
+++ b/_about.scss
@@ -82,6 +82,7 @@
         }
         .hire-btn{
             width: 30%;
+            background-color: green;
             @media(max-width:360px){
                 width: 20%;
         }
