--- a/_trusted.scss
+++ b/_trusted.scss
@@ -1,87 +1,61 @@
-.trusted{
+.bottm-trusted{
+    background-color: red;
     width: 100%;
-    .top-trusted{
-        text-align: center;
-        padding-top: 6rem;
-        @media(max-width:768px){
-            font-size: 30px;
-            line-height: 56px;
-    }
-    .bottm-trusted{
+    .testimony{
         width: 100%;
+        background-color: green;
         padding: 2rem;
         @media(max-width:768px){
-            padding: .5rem;
+            padding: 0rem;
         }
-        align-items: center;
-        .testimony{
+        .slide{
             width: 80%;
-            padding: 2rem 2rem;
-            align-items: center;
-            margin-left: 10rem;
+            padding: 2rem;
+            // gap: 1rem;
+            background-color: tomato;
             @media(max-width:768px){
-                margin-left: 1rem;
+                flex-direction: column;
+                padding: .1rem;
                 width: 100%;
-                background-color: red;
             }
-            // background-color: red;
-            .test-content{
-                width: 100%;
-                padding: 1.2rem;
-                // background-color: antiquewhite;
-                align-items: center;
-                .slide{
+            .left-slide{
+                width: 50%;
+                margin-top: 2rem;
+                position: relative;
+                @media(max-width:768px){
                     width: 100%;
-                    gap: 4rem;
-                    .left-slide{
-                        width: 45%;
-                        position: relative;
-                        @media(max-width:768px){
-                            width: 100%;
-                            gap: 1rem;
-                        }
-                        // z-index: 2;
-                        img{
-                            width: 90%;
-                            // z-index: 600;
-                            transform: rotate(10deg);
-                            border-right: 2px solid black;
-                            border-bottom: 2px solid black;
-                        }
-                        .overaly{
-                            width: 50%;
-                            height: 268px;
-                            background-color: rgb(88,0,255);
-                            position: absolute;
-                            // z-index: 1;
-                            top: 1rem;
-                            left: 0rem;
-                            transform: rotate(10deg);
-                        }
+                }
+                img{
+                    width: 30%;
+                    z-index: 90;
+                    transform: rotate(13deg);
+                    position: relative;
+                    @media(max-width:768px){
+                        width: 60%;
                     }
-                    .right-slide{
-                        width: 70%;
-                        flex-direction: column;
-                        gap: 1rem;
-                        @media(max-width:768px){
-                            width: 100%;
-                        }
-                        img{
-                            width: 8%;
-                        }
-                        p{
-                            font-size: 18px;
-                            line-height: 31px;
-                            width: 100%;
-                            @media(max-width:768px){
-                                font-size: 16px;
-                            line-height: 25px
-                            }
-                        }
+                }
+                .overaly{
+                    width:30% ;
+                    height: 200px;
+                    right: 10rem;
+                    top: .4rem;
+                    transform: rotate(13deg);
+                    background-color: rgb(88,0,255);
+                    position: absolute;
+                    z-index: 1;
+                    @media(max-width:768px){
+                        width: 60%;
+                        height: 290px;
+                        right: 4rem;
                     }
                 }
             }
-            
+            .right-slide{
+                width: 50%;
+                @media(max-width:768px){
+                    width: 70%;
+                }
+            }
         }
     }
-}}
+}
