--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@ span {
 }
 .abt-me .right-abt .graphic-skils .hire-btn {
   width: 30%;
+  background-color: green;
 }
 @media (max-width: 360px) {
   .abt-me .right-abt .graphic-skils .hire-btn {
@@ -417,98 +418,76 @@ span {
   line-height: 22px;
 }
 
-.trusted {
+.bottm-trusted {
+  background-color: red;
   width: 100%;
 }
-.trusted .top-trusted {
-  text-align: center;
-  padding-top: 6rem;
-}
-@media (max-width: 768px) {
-  .trusted .top-trusted {
-    font-size: 30px;
-    line-height: 56px;
-  }
-}
-.trusted .top-trusted .bottm-trusted {
+.bottm-trusted .testimony {
   width: 100%;
+  background-color: green;
   padding: 2rem;
-  align-items: center;
 }
 @media (max-width: 768px) {
-  .trusted .top-trusted .bottm-trusted {
-    padding: 0.5rem;
+  .bottm-trusted .testimony {
+    padding: 0rem;
   }
 }
-.trusted .top-trusted .bottm-trusted .testimony {
+.bottm-trusted .testimony .slide {
   width: 80%;
-  padding: 2rem 2rem;
-  align-items: center;
-  margin-left: 10rem;
+  padding: 2rem;
+  background-color: tomato;
 }
 @media (max-width: 768px) {
-  .trusted .top-trusted .bottm-trusted .testimony {
-    margin-left: 1rem;
+  .bottm-trusted .testimony .slide {
+    flex-direction: column;
+    padding: 0.1rem;
     width: 100%;
-    background-color: red;
   }
 }
-.trusted .top-trusted .bottm-trusted .testimony .test-content {
-  width: 100%;
-  padding: 1.2rem;
-  align-items: center;
-}
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide {
-  width: 100%;
-  gap: 4rem;
-}
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide {
-  width: 45%;
+.bottm-trusted .testimony .slide .left-slide {
+  width: 50%;
+  margin-top: 2rem;
   position: relative;
 }
 @media (max-width: 768px) {
-  .trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide {
+  .bottm-trusted .testimony .slide .left-slide {
     width: 100%;
-    gap: 1rem;
   }
 }
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide img {
-  width: 90%;
-  transform: rotate(10deg);
-  border-right: 2px solid black;
-  border-bottom: 2px solid black;
+.bottm-trusted .testimony .slide .left-slide img {
+  width: 30%;
+  z-index: 90;
+  transform: rotate(13deg);
+  position: relative;
 }
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .left-slide .overaly {
-  width: 50%;
-  height: 268px;
+@media (max-width: 768px) {
+  .bottm-trusted .testimony .slide .left-slide img {
+    width: 60%;
+  }
+}
+.bottm-trusted .testimony .slide .left-slide .overaly {
+  width: 30%;
+  height: 200px;
+  right: 10rem;
+  top: 0.4rem;
+  transform: rotate(13deg);
   background-color: rgb(88, 0, 255);
   position: absolute;
-  top: 1rem;
-  left: 0rem;
-  transform: rotate(10deg);
-}
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide {
-  width: 70%;
-  flex-direction: column;
-  gap: 1rem;
+  z-index: 1;
 }
 @media (max-width: 768px) {
-  .trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide {
-    width: 100%;
+  .bottm-trusted .testimony .slide .left-slide .overaly {
+    width: 60%;
+    height: 290px;
+    right: 4rem;
   }
 }
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide img {
-  width: 8%;
-}
-.trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
-  font-size: 18px;
-  line-height: 31px;
-  width: 100%;
+.bottm-trusted .testimony .slide .right-slide {
+  width: 50%;
 }
 @media (max-width: 768px) {
-  .trusted .top-trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
-    font-size: 16px;
-    line-height: 25px;
+  .bottm-trusted .testimony .slide .right-slide {
+    width: 70%;
   }
 }
 
