--- a/style.scss
+++ b/style.scss
@@ -180,7 +180,8 @@ body{
             }
             img{
                 @media(max-width:768px),(max-width: 200px){
-                    width: 100%;
+                    width: 95%;
+                    filter: grayscale(100%);
                 }
                 width: 78%;
             }
