--- a/style.css
+++ b/style.css
@@ -1017,6 +1017,7 @@ body {
 }
 @media (max-width: 768px), (max-width: 200px) {
   .work .main-work-menu .right-main img {
-    width: 100%;
+    width: 95%;
+    filter: grayscale(100%);
   }
 }/*# sourceMappingURL=style.css.map */
