--- a/_trusted.scss
+++ b/_trusted.scss
@@ -1,61 +1,70 @@
-.bottm-trusted{
-    background-color: red;
+.trusted{
     width: 100%;
-    .testimony{
+    .top-trusted{
+        padding-top: 2rem;
+    }
+    .bottm-trusted{
         width: 100%;
-        background-color: green;
-        padding: 2rem;
-        @media(max-width:768px){
-            padding: 0rem;
-        }
-        .slide{
-            width: 80%;
+        padding-top: 3rem;
+        font-size: 18px;
+        line-height: 31px;
+        .testimony{
+            width: 100%;
+            // background-color: green;
             padding: 2rem;
-            // gap: 1rem;
-            background-color: tomato;
             @media(max-width:768px){
-                flex-direction: column;
-                padding: .1rem;
-                width: 100%;
+                padding: 0rem;
             }
-            .left-slide{
-                width: 50%;
-                margin-top: 2rem;
-                position: relative;
+            .slide{
+                width: 80%;
+                padding: 2rem;
+                // gap: 1rem;
+                // background-color: tomato;
                 @media(max-width:768px){
+                    flex-direction: column;
+                    padding: .1rem;
                     width: 100%;
                 }
-                img{
-                    width: 30%;
-                    z-index: 90;
-                    transform: rotate(13deg);
+                .left-slide{
+                    width: 50%;
+                    margin-top: 2rem;
                     position: relative;
                     @media(max-width:768px){
-                        width: 60%;
+                        width: 100%;
+                    }
+                    img{
+                        width: 30%;
+                        z-index: 90;
+                        transform: rotate(13deg);
+                        position: relative;
+                        @media(max-width:768px){
+                            width: 60%;
+                        }
+                    }
+                    .overaly{
+                        width:30% ;
+                        height: 200px;
+                        right: 10rem;
+                        top: .4rem;
+                        transform: rotate(13deg);
+                        // background-color: rgb(88,0,255);
+                        position: absolute;
+                        z-index: 1;
+                        @media(max-width:768px){
+                            width: 60%;
+                            height: 290px;
+                            right: 4rem;
+                        }
                     }
                 }
-                .overaly{
-                    width:30% ;
-                    height: 200px;
-                    right: 10rem;
-                    top: .4rem;
-                    transform: rotate(13deg);
-                    background-color: rgb(88,0,255);
-                    position: absolute;
-                    z-index: 1;
+                .right-slide{
+                    width: 50%;
                     @media(max-width:768px){
-                        width: 60%;
-                        height: 290px;
-                        right: 4rem;
+                        width: 70%;
                     }
-                }
-            }
-            .right-slide{
-                width: 50%;
-                @media(max-width:768px){
-                    width: 70%;
                 }
             }
         }
     }
 }
+
