--- a/_globalClasses.scss
+++ b/_globalClasses.scss
@@ -115,13 +115,15 @@ span{
     margin-top: 1rem;
 }
 .absol{
-    padding: 1rem 1rem;
-    background-color: rgb(176, 28, 240);
     border-radius: 50%;
-    position: absolute;
-    font-size: 2rem;
     // position: absolute;
-    right: 1rem;
+    font-size: 2rem;
+    right: 2rem;
     position: fixed;
-    top: 29rem;
+    top: 13rem;
+    z-index: 200;
+    animation: glow 1s ease-in-out infinite alternate;
+    img{
+        width: 70px;
+    }
 }
