--- a/style.scss
+++ b/style.scss
@@ -122,7 +122,7 @@ body{
             padding-top: 1rem;
         }
         svg{
-            width: 18px;
+            width: 28px;
         }
         .line{
             width: 30px;
@@ -160,7 +160,8 @@ body{
             h1{
                 width: 100%;
                 font-size: 60px;
-                line-height: 80px;
+                line-height: 20px;
+                color: rgb(251,203,10);
                 @media(max-width:768px){
                     font-size: 40px;
                     line-height: 50px;
@@ -183,6 +184,14 @@ body{
                     width: 95%;
                 }
                 width: 78%;
+                &:hover{
+                    margin-top: .8rem;
+                    transition: 1s;
+                }
+                @keyframes margin {
+                    
+                }
+
             }
         }
     }
