--- a/_trusted.scss
+++ b/_trusted.scss
@@ -1,70 +1,120 @@
 .trusted{
     width: 100%;
+    font-family: 'Josefin Sans', sans-serif;
     .top-trusted{
-        padding-top: 2rem;
+        width: 100%;
+        font-family: 'Josefin Sans', sans-serif;
+        text-align: center;
     }
     .bottm-trusted{
-        width: 100%;
-        padding-top: 3rem;
-        font-size: 18px;
-        line-height: 31px;
-        .testimony{
-            width: 100%;
-            // background-color: green;
-            padding: 2rem;
+        width: 100% ;
+        .swiper {
+            width: 70% ;
+            position: relative;
+            display: flex;
+            justify-content: center;
             @media(max-width:768px){
-                padding: 0rem;
+                width: 100%;
             }
-            .slide{
-                width: 80%;
-                padding: 2rem;
-                // gap: 1rem;
-                // background-color: tomato;
+            .swiper-wrapper{
+                width: 100%;
+                height: 300px;
+                z-index: 10;
                 @media(max-width:768px){
-                    flex-direction: column;
-                    padding: .1rem;
-                    width: 100%;
+                    height: 230px;
                 }
-                .left-slide{
-                    width: 50%;
+                .swiper-slide{
+                    width: 70%;
+                    height:100%;
+                    display: flex;
+                    // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+                    border-radius: 1rem;
+                    overflow: hidden        ;
+                    // background-color: green; 
                     margin-top: 2rem;
-                    position: relative;
                     @media(max-width:768px){
                         width: 100%;
                     }
-                    img{
-                        width: 30%;
-                        z-index: 90;
-                        transform: rotate(13deg);
+                    .left-sectn{
+                        width: 40%;
+                        height: 100%;
+                        // background-color: blue;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
                         position: relative;
+                        padding-bottom: 1.3rem;
                         @media(max-width:768px){
-                            width: 60%;
+                            // justify-content: flex-start;
+                            margin-top: 4rem;
+                            height: 40%;
+                            width: 40%;
+                            padding-bottom: 2rem;
+                        }
+                        img{
+                            width: 40%;
+                            z-index: 2990;  
+                            transform: rotate(10deg);  
+                        }
+                        .bg-overal{
+                            width: 40%;
+                            height: 63%;
+                            position: absolute;
+                            background-color:   rgb(25, 85, 214);
+                            margin-left: 1rem;
+                            margin-top: 1.7rem;
+                            z-index: 1;
+                            border-style: dashed;
+                            transform: rotate(10deg); 
+                            @media(max-width:768px){
+                                width: 40%;
+                                height: 80%;
+                                margin-left: 1rem;
+                            }
                         }
                     }
-                    .overaly{
-                        width:30% ;
-                        height: 200px;
-                        right: 10rem;
-                        top: .4rem;
-                        transform: rotate(13deg);
-                        // background-color: rgb(88,0,255);
-                        position: absolute;
-                        z-index: 1;
-                        @media(max-width:768px){
-                            width: 60%;
-                            height: 290px;
-                            right: 4rem;
+                    .right-sectn{
+                        width: 60%;
+                        height: 100%;
+                        // background-color: yellow    ;
+                        p{
+                            font-size: 1.2rem;
+                            color: white;
+                            margin-top: 0;
+                            margin-bottom: 0;
+                            line-height: 1.4;
+                            @media(max-width:768px){
+                                font-size: .7rem;
+                                line-height: 1 ;
+                            }
+                        }
+                        span{
+                            font-size: 3rem;
+                            line-height: 1;
                         }
                     }
                 }
-                .right-slide{
-                    width: 50%;
+            }
+            .custom-btns{
+                // background-color: red;
+                position: absolute;
+                width: 100%;
+                right: 0;
+                display: flex;
+                justify-content: flex-end;
+                bottom: 0;
+                z-index: 9999;
+                gap: 1.4rem;
+                @media(max-width:768px){
+                    gap: 0rem;
+                    padding-right: 3rem;
+                svg{
+                    width: 50px;
                     @media(max-width:768px){
-                        width: 70%;
+                        width: 30px;
                     }
                 }
             }
         }
     }
-}
-
+}}  
