--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
 @import"trusted";
 @import"happy-sectn";
 @import"conctact";
+@import"./hamMenuList";
 body{
     font-family: 'Roboto', sans-serif;
     background-color: rgb(22,18,26);
