--- a/_trusted.scss
+++ b/_trusted.scss
@@ -55,13 +55,16 @@
                             width: 40%;
                             z-index: 2990;  
                             transform: rotate(10deg);  
+                            @media(max-width:768px){
+                                width: 50%;
+                            }
                         }
                         .bg-overal{
-                            width: 40%;
-                            height: 63%;
+                            width: 50%;
+                            height: 68%;
                             position: absolute;
                             background-color:   rgb(25, 85, 214);
-                            margin-left: 1rem;
+                            margin-left: 2rem;
                             margin-top: 1.7rem;
                             z-index: 1;
                             border-style: dashed;
