--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,73 @@ body{
                 width: 70%;
             }
         }
+        .mobo-menu-list{
+            width: 100%;
+            position: absolute;
+            top: 0;
+            padding: 1.5rem;
+            right: 0;
+            font-size: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap:.4rem;
+            background-color: rgb(15,11,18) ; 
+            display: none;
+            
+            // a{
+            //     border-bottom: 1px solid white;
+            //     padding: .4rem;
+            //     color: rgba(234, 222, 255, 0.792);
+                
+            // }      
+            .home-men{
+                border-bottom: 1px solid rgb(92, 91, 91);
+                padding-top: 1rem;
+                .drop{
+                    padding: .5rem .9rem;  
+                    background-color: rgb(245, 240, 240);
+                    font-size: .5rem;
+                    color: black;
+                    font-weight: 600;
+                    font-family: Arial, Helvetica, sans-serif;
+                }
+            }
+            svg{
+                margin-bottom: 2.6rem;
+                background-color: rgb(88,0,255);
+                border-radius: 50%;
+                width :40px;
+                padding: .3rem  ;
+            }
+            .footer-ham-list{   
+                width: 100%;
+                margin-top: 1rem;
+                padding: 2rem 0;
+                .contact-infor{
+                    margin-top: 2rem;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+                }
+                img{
+                    width: 70%;
+                    padding: 1rem 0;
+                }
+            }
+            .socials{
+                margin-top: 2rem;
+                display: flex;
+                gap: 2rem;
+                
+                i{
+                    padding: .4rem;
+                    background-color: rgb(88,0,255);
+                }
+            }
+        }
+        .active{
+            display: block;
+        }
         .mobo-menu{
             width: 50%;
             gap: 2rem;
